added a bit of the sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<mat-sidenav-container>
-  <mat-sidenav mode="side" opened>
-    <!-- Main logo -->
-    <span class="logo"><mat-icon inline>book</mat-icon></span>
-    <span style="font-size: 32px">Registro</span>
+<div class="main-container">
+  <div class="side-menu">
+    <!-- Logo -->
+    <div class="logo-container">
+      <mat-icon class="logo">book</mat-icon>
+      <div>Registro</div>
+    </div>
 
     <app-profile-bit></app-profile-bit>
-  </mat-sidenav>
-  <mat-sidenav-content>Content</mat-sidenav-content>
-</mat-sidenav-container>
+  </div>
+  <div class="application">Placeholder</div>
+</div>
