--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,37 @@
-mat-sidenav-container {
+.main-container {
+  display: flex;
   height: 100%;
 }
 
-mat-sidenav,
-mat-sidenav-content {
+.side-menu {
+  display: flex;
+  flex-direction: column;
+
+  color: white;
+  background-color: var(--main-color);
+  flex-basis: 250px;
+}
+
+.side-menu div {
   padding: 16px;
 }
 
-mat-sidenav {
-  color: white;
-  background-color: var(--main-color);
-  width: 250px;
-
+.logo-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+}
+
+.logo-container div {
+  padding: 0px;
 }
 
 .logo {
   font-size: 52px;
+  vertical-align: baseline;
+  height: auto;
+  width: auto;
+}
+
+.logo + div {
+  font-size: 32px;
+  padding-top: 8px;
 }
