--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="app-container">
   <div class="side-menu">
     <!-- Logo -->
     <div class="logo-container">
@@ -7,6 +7,8 @@
     </div>
 
     <app-profile-bit></app-profile-bit>
+    <br />
+    <app-company-explorer></app-company-explorer>
   </div>
   <div class="application">Placeholder</div>
 </div>
