--- a/src/app/components/company-explorer/company-explorer.component.html
+++ b/src/app/components/company-explorer/company-explorer.component.html
@@ -1,6 +1,19 @@
-<p class="element-adder">+ Aggiungi azienda</p>
-<mat-tree [dataSource]="sideMenu">
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-    {{ node.companies }}
-  </mat-tree-node>
+<button mat-flat-button disableRipple class="element-adder">
+  + Aggiungi azienda
+</button>
+
+<mat-tree [dataSource]="sideMenu" [treeControl]="treeControl">
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+    <div class="mat-tree-node">
+      <button mat-flat-button disableRipple matTreeNodeToggle>
+        {{ node.name }}
+      </button>
+      <div>
+        <ng-container
+          matTreeNodeOutlet
+          *ngIf="treeControl.isExpanded(node)"
+        ></ng-container>
+      </div>
+    </div>
+  </mat-nested-tree-node>
 </mat-tree>
