--- a/src/app/components/company-explorer/company-explorer.component.html
+++ b/src/app/components/company-explorer/company-explorer.component.html
@@ -4,11 +4,11 @@
 
 <mat-tree [dataSource]="sideMenu" [treeControl]="treeControl">
   <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-    <div class="mat-tree-node">
+    <div class="mat-tree-node" style="display: block">
       <button mat-flat-button disableRipple matTreeNodeToggle>
         {{ node.name }}
       </button>
-      <div>
+      <div class="company-content">
         <ng-container
           matTreeNodeOutlet
           *ngIf="treeControl.isExpanded(node)"
