--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,7 @@
     <br />
     <app-company-explorer></app-company-explorer>
   </div>
-  <div class="application">Placeholder</div>
+  <div class="app-interface">
+    <app-front-page></app-front-page>
+  </div>
 </div>
