--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-  <div class="side-menu">
+  <div class="sidebar">
     <!-- Logo -->
     <div class="logo-container">
       <mat-icon class="logo">book</mat-icon>
@@ -9,6 +9,12 @@
     <app-profile-bit></app-profile-bit>
     <br />
     <app-company-explorer></app-company-explorer>
+    <hr />
+    <div class="sidebar-footer">
+      <button mat-flat-button disableRipple>Esami</button>
+      <br />
+      <button mat-flat-button disableRipple>Impostazioni</button>
+    </div>
   </div>
   <div class="app-interface">
     <app-front-page></app-front-page>
