--- a/src/app/components/front-page/front-page.component.html
+++ b/src/app/components/front-page/front-page.component.html
@@ -3,4 +3,9 @@
 <div class="text-container">
   <div>{{ lorem }}</div>
   <div>{{ lorem }}</div>
+  <div>{{ lorem }}</div>
+  <div>{{ lorem }}</div>
+  <div>{{ lorem }}</div>
+  <div>{{ lorem }}</div>
+  <div>{{ lorem }}</div>
 </div>
