--- a/src/app/components/company-explorer/company-explorer.component.css
+++ b/src/app/components/company-explorer/company-explorer.component.css
@@ -1,3 +1,9 @@
+.mat-tree {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+}
+
 .mat-tree *,
 .element-adder {
   background-color: var(--main-color);
@@ -6,10 +12,13 @@
   font-weight: 400;
 }
 
-/* .mat-tree-node {
+.mat-tree-node {
+  display: flex;
+}
+
+.mat-tree-node > div {
   flex-direction: column;
-  align-items: initial;
-} */
+}
 
 .company-content {
   padding-left: 20px;
