--- a/src/app/components/company-explorer/company-explorer.component.html
+++ b/src/app/components/company-explorer/company-explorer.component.html
@@ -3,8 +3,11 @@
 </button>
 
 <mat-tree [dataSource]="sideMenu" [treeControl]="treeControl">
-  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-    <div class="mat-tree-node" style="display: block">
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: isCompany">
+  </mat-nested-tree-node>
+
+  <mat-nested-tree-node *matTreeNodeDef="let node">
+    <div class="mat-tree-node">
       <button mat-flat-button disableRipple matTreeNodeToggle>
         {{ node.name }}
       </button>
