--- a/src/app/components/company-explorer/company-explorer.component.css
+++ b/src/app/components/company-explorer/company-explorer.component.css
@@ -1,9 +1,3 @@
-.mat-tree {
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-evenly;
-}
-
 .mat-tree *,
 .element-adder {
   background-color: var(--main-color);
@@ -13,21 +7,17 @@
 }
 
 .mat-tree-node {
-  display: flex;
+  display: block;
 }
 
-.mat-tree-node > div {
-  flex-direction: column;
+.node {
+  width: 100%;
 }
 
-.company-content {
+.node-content {
   padding-left: 20px;
 }
 
 .element-adder {
   color: #a3a3a3;
-}
-
-.company {
-  text-indent: 0.8em;
 }
