--- a/src/app/components/company-explorer/company-explorer.component.html
+++ b/src/app/components/company-explorer/company-explorer.component.html
@@ -3,15 +3,20 @@
 </button>
 
 <mat-tree [dataSource]="sideMenu" [treeControl]="treeControl">
-  <mat-nested-tree-node *matTreeNodeDef="let node; when: isCompany">
-  </mat-nested-tree-node>
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+    <button mat-flat-button disableRipple matTreeNodeToggle>
+      {{ node.name }}
+    </button>
+  </mat-tree-node>
 
-  <mat-nested-tree-node *matTreeNodeDef="let node">
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: isCompany">
     <div class="mat-tree-node">
-      <button mat-flat-button disableRipple matTreeNodeToggle>
-        {{ node.name }}
-      </button>
-      <div class="company-content">
+      <div class="node">
+        <button mat-flat-button disableRipple matTreeNodeToggle>
+          {{ node.name }}
+        </button>
+      </div>
+      <div class="node-content">
         <ng-container
           matTreeNodeOutlet
           *ngIf="treeControl.isExpanded(node)"
