--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <div class="sidebar">
     <!-- Logo -->
-    <div class="logo-container">
+    <div class="logo-container" routerLink="">
       <mat-icon class="logo">book</mat-icon>
       <div>Registro</div>
     </div>
@@ -17,6 +17,6 @@
     </div>
   </div>
   <div class="app-interface">
-    <app-front-page></app-front-page>
+    <router-outlet></router-outlet>
   </div>
 </div>
