added search-bar and form material components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
     </div>
   </div>
   <div class="app-interface">
+    <app-search-bar></app-search-bar>
     <router-outlet></router-outlet>
   </div>
 </div>
