--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,3 +1,3 @@
-<mat-form-field>
-  <input placeholder="Search" />
+<mat-form-field matForm>
+  <input matInput placeholder="Search" />
 </mat-form-field>
