Eliminato course.model

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,8 @@
       <button mat-flat-button disableRipple>Esami</button>
       <br />
       <button mat-flat-button disableRipple>Impostazioni</button>
+      <br />
+      <button mat-flat-button disableRipple>Scarica Excell</button>
     </div>
   </mat-drawer-container>
   <div class="app-interface">
