--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,4 @@
 .app-container {
-  display: flex;
   height: 100vh;
 }
 
@@ -7,7 +6,7 @@
   color: white;
   font-size: 18px;
   background-color: var(--main-color);
-  flex: 0 0 250px;
+  width: 250px;
 }
 
 .logo-container {
@@ -39,11 +38,12 @@
 }
 
 .app-interface {
-  flex: 0 1 calc(100vw - 250px);
+  height: 100%;
   background-color: #f3f3f3;
 }
 
 hr {
   color: white;
-  width: 90%;
+  width: 70%;
+  margin-left: 7.5%;
 }
