--- a/src/app/components/course-interface/course-interface.component.html
+++ b/src/app/components/course-interface/course-interface.component.html
@@ -6,5 +6,5 @@
   *ngIf="open_page === 1; else registry"
 ></app-course-students>
 <ng-template #registry>
-  <app-course-registry></app-course-registry
-></ng-template>
+  <app-course-registry></app-course-registry>
+</ng-template>
