--- a/src/app/components/course-interface/course-interface.component.html
+++ b/src/app/components/course-interface/course-interface.component.html
@@ -1,6 +1,6 @@
 <h1>{{ courseContainer.course.name }} - {{ courseContainer.name }}</h1>
-<button mat-flat-button (click)="openCoursePage(1)">Studenti</button>
-<button mat-flat-button (click)="openCoursePage(2)">Registro</button>
+<button mat-flat-button (click)="switchInterface(1)">Studenti</button>
+<button mat-flat-button (click)="switchInterface(2)">Registro</button>
 <div class="breaker"></div>
 <app-course-students
   *ngIf="open_page === 1; else registry"
