--- a/src/app/components/course-students/course-students.component.html
+++ b/src/app/components/course-students/course-students.component.html
@@ -1,1 +1,4 @@
-<p>course-students works!</p>
+<app-student-card
+  *ngFor="let student of student_list"
+  [student]="student"
+></app-student-card>
