--- a/src/app/components/course-interface/course-interface.component.css
+++ b/src/app/components/course-interface/course-interface.component.css
@@ -1,3 +1,9 @@
 .breaker {
   padding-bottom: 16px;
 }
+
+.student-container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: calc(100vw - 200px);
+}
