started working on the search bar component

--- a/src/app/components/search-bar/search-bar.component.css
+++ b/src/app/components/search-bar/search-bar.component.css
@@ -1,5 +1,7 @@
-mat-form-field {
-  min-width: calc(100vw - 250px);
-  max-width: calc(100vw - 250px);
+#search-bar {
+  /* display: block; */
   width: 100%;
+
+  border: 0;
+  padding: 34px 0;
 }
