--- a/src/app/components/company-explorer/company-explorer.component.html
+++ b/src/app/components/company-explorer/company-explorer.component.html
@@ -6,7 +6,7 @@
   <mat-tree-node
     class="course"
     *matTreeNodeDef="let node"
-    [ngClass]="currentCourseID === node.id ? 'selected' : ''"
+    [ngClass]="currentCourseID == node.id ? 'selected' : ''"
   >
     <button
       routerLink="/course/{{ node.id }}"
