--- a/src/app/components/student-card/student-card.component.css
+++ b/src/app/components/student-card/student-card.component.css
@@ -1,4 +1,11 @@
 .student-card {
   width: 300px;
-  margin: 30px 0 0 30px;
+  margin: 15px 25px;
+  padding: 0;
+}
+
+.student-card-title {
+  background-color: var(--main-color);
+  color: white;
+  padding: 15px;
 }
