added search-output component

--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,1 +1,2 @@
-<input type="text" id="search-bar" />
+<!-- TODO: add search icon in placeholder -->
+<input type="text" id="search-bar" placeholder="Cerca" />
