--- a/src/app/components/course-registry/course-registry.component.css
+++ b/src/app/components/course-registry/course-registry.component.css
@@ -9,7 +9,7 @@ mat-icon
     margin-right:10px;  
 }
 
-.child-one
+.datepicker
 {   
     flex-direction: row;  
     align-self: flex-end;
@@ -17,28 +17,31 @@ mat-icon
     width:350px;   
 }
 
-.child-two
+.topics
 {   
     margin-top:40px;
     flex-direction:column;
     align-self: flex-end;
-    justify-content: flex-start;
+    justify-content: flex-start; 
 }
 
-.child-three
-{       
-    flex-direction:column;
-    align-self: flex-end;
-    justify-content: flex-start;
- 
+.topics #bodytopics
+{
+    color:gray;    
+    position:relative;
+    margin-left:80px;
+    margin-right:40px;
 }
 
-child-one input
+.examslist
+{      
+    flex-direction:column;   
+}
+
+.datepicker #picker
 {
     font-size:20px;
 }
-
-
 
 p
 {
@@ -61,6 +64,6 @@ mat-divider
 }
 
 ::ng-deep .mat-form-field
-{
-    font-size:20px;
+{           
+    font-size:15px;
 }
