--- a/src/app/components/course-registry/course-registry.component.html
+++ b/src/app/components/course-registry/course-registry.component.html
@@ -1,11 +1,11 @@
 <div class="parent">
 
-  <div class="child-one">  
+  <div class="datepicker">  
     <p><mat-icon matListIcon>today</mat-icon> Seleziona una data:</p>
-    <mat-form-field appearance="fill">    
-    <input matInput [matDatepicker]="picker">   
+    <mat-form-field appearance="outline">    
+    <input id="picker" matInput [matDatepicker]="picker" [value]="currentDate">   
     <mat-datepicker-toggle matSuffix [for]="picker">
-      <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+    <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
     </mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>  
    </mat-form-field> 
@@ -16,21 +16,20 @@
 
 <div class="parent">
 
-  <div class="child-two">
-<p><mat-icon matListIcon>assignment</mat-icon> Argomenti del giorno: </p>
-  <mat-list>
-    <mat-list-item><mat-icon>noise_control_off</mat-icon> Topic 1 </mat-list-item>
-    <mat-list-item><mat-icon>noise_control_off</mat-icon>  Topic 2 </mat-list-item>
-    <mat-list-item><mat-icon>noise_control_off</mat-icon>  Topic 3 </mat-list-item>
-    <mat-list-item><mat-icon>noise_control_off</mat-icon>  Topic 4 </mat-list-item>
-    <mat-list-item><mat-icon>noise_control_off</mat-icon>  Topic 5 </mat-list-item>
-    <mat-list-item><mat-icon>noise_control_off</mat-icon>  Topic 6 </mat-list-item>
-    <mat-list-item><mat-icon>noise_control_off</mat-icon>  Topic 7 </mat-list-item>
-    <mat-list-item><mat-icon>noise_control_off</mat-icon>  Topic 8 </mat-list-item>
-   </mat-list>
+  <div class="topics">
+    <p><mat-icon matListIcon>assignment</mat-icon> Argomenti del giorno:</p>
+    <p id="bodytopics">
+      Oggi si è studiato il sistema dopaminergico degli assolotti. In particolare, le dinamiche fisiologiche alla base della risposta fight-or-flight della salamandra endemica del messico.
+      Oggi si è studiato il sistema dopaminergico degli assolotti. In particolare, le dinamiche fisiologiche alla base della risposta fight-or-flight della salamandra endemica del messico.
+      Oggi si è studiato il sistema dopaminergico degli assolotti. In particolare, le dinamiche fisiologiche alla base della risposta fight-or-flight della salamandra endemica del messico.
+      Oggi si è studiato il sistema dopaminergico degli assolotti. In particolare, le dinamiche fisiologiche alla base della risposta fight-or-flight della salamandra endemica del messico.
+     </p> 
+   
   </div>
+</div>
 
-  <div class="child-three">
+<div class="parent">
+  <div class="examslist">
     <p><mat-icon matListIcon>edit_document</mat-icon> Esami del giorno: </p>
       <mat-list>
         <mat-list-item>         
@@ -59,4 +58,4 @@
         </mat-list-item>
        </mat-list>
       </div>
-</div>
+    </div>
