--- a/src/app/components/course-registry/course-registry.component.html
+++ b/src/app/components/course-registry/course-registry.component.html
@@ -1,16 +1,19 @@
 <div class="parent">
 
-  <div class="datepicker">  
+  <div class="datepicker">
     <p><mat-icon matListIcon>today</mat-icon> Seleziona una data:</p>
-    <mat-form-field appearance="outline">    
-    <input id="picker" matInput [matDatepicker]="picker" [value]="currentDate">   
-    <mat-datepicker-toggle matSuffix [for]="picker">
-    <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-    </mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>  
-   </mat-form-field> 
-   </div>
- </div>
+    <mat-form-field appearance="outline">
+      <input id="picker" matInput [matDatepicker]="picker"
+        [value]="currentDate">
+      <mat-datepicker-toggle matSuffix [for]="picker">
+        <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+      </mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </div>
+
+  <button id="reg_btn" mat-stroked-button><mat-icon matListIcon>save_document</mat-icon>Salva</button>
+</div>
 
 <mat-divider></mat-divider>
 
@@ -18,44 +21,28 @@
 
   <div class="topics">
     <p><mat-icon matListIcon>assignment</mat-icon> Argomenti del giorno:</p>
-    <p id="bodytopics">
-      Oggi si è studiato il sistema dopaminergico degli assolotti. In particolare, le dinamiche fisiologiche alla base della risposta fight-or-flight della salamandra endemica del messico.
-      Oggi si è studiato il sistema dopaminergico degli assolotti. In particolare, le dinamiche fisiologiche alla base della risposta fight-or-flight della salamandra endemica del messico.
-      Oggi si è studiato il sistema dopaminergico degli assolotti. In particolare, le dinamiche fisiologiche alla base della risposta fight-or-flight della salamandra endemica del messico.
-      Oggi si è studiato il sistema dopaminergico degli assolotti. In particolare, le dinamiche fisiologiche alla base della risposta fight-or-flight della salamandra endemica del messico.
-     </p> 
-   
+    <textarea id="bodytopics" role="textbox" rows="10">Testo di prova</textarea>
   </div>
 </div>
 
 <div class="parent">
   <div class="examslist">
     <p><mat-icon matListIcon>edit_document</mat-icon> Esami del giorno: </p>
-      <mat-list>
-        <mat-list-item>         
-          <p matLine> Exam 1 </p>
-          <p matLine> URL 1 </p> 
-        </mat-list-item>
+    <mat-list>
+      <mat-list-item>
+        <input type="text" placeholder="Esame" matLine>
+        <input type="text" placeholder="URL" matLine>
+      </mat-list-item>
 
-        <mat-list-item>         
-          <p matLine> Exam 2 </p>
-          <p matLine> URL 2 </p> 
-        </mat-list-item>
+      <mat-list-item>
+        <input type="text" placeholder="Esame" matLine>
+        <input type="text" placeholder="URL" matLine>
+      </mat-list-item>
 
-        <mat-list-item>         
-          <p matLine> Exam 3 </p>
-          <p matLine> URL 3 </p> 
-        </mat-list-item>
-
-        <mat-list-item>         
-          <p matLine> Exam 4 </p>
-          <p matLine> URL 4 </p> 
-        </mat-list-item>
-
-        <mat-list-item>         
-          <p matLine> Exam 5 </p>
-          <p matLine> URL 5 </p> 
-        </mat-list-item>
-       </mat-list>
-      </div>
-    </div>
+      <mat-list-item>
+        <input type="text" placeholder="Esame" matLine>
+        <input type="text" placeholder="URL" matLine>
+      </mat-list-item>
+    </mat-list>
+  </div>
+</div>
