--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<mat-drawer-container class="app-container">
-  <mat-drawer class="sidebar" mode="side" opened>
+<mat-sidenav-container class="app-container" scrollable="false">
+  <mat-sidenav class="sidebar" mode="side" opened disableClose>
     <!-- Logo -->
     <div class="logo-container" routerLink="">
       <mat-icon class="logo">book</mat-icon>
@@ -19,9 +19,9 @@
         Scarica Excel
       </button>
     </div>
-  </mat-drawer>
-  <mat-drawer-container class="app-interface">
+  </mat-sidenav>
+  <mat-sidenav-content class="app-interface">
     <app-search-bar></app-search-bar>
     <router-outlet></router-outlet>
-  </mat-drawer-container>
-</mat-drawer-container>
+  </mat-sidenav-content>
+</mat-sidenav-container>
