--- a/src/app/components/course-registry/course-registry.component.html
+++ b/src/app/components/course-registry/course-registry.component.html
@@ -3,8 +3,7 @@
   <div class="datepicker">
     <p><mat-icon matListIcon>today</mat-icon> Seleziona una data:</p>
     <mat-form-field appearance="outline">
-      <input id="picker" matInput [matDatepicker]="picker"
-        [value]="currentDate">
+      <input id="picker" matInput [matDatepicker]="picker" [value]="currentDate" (dateChange)="dateChangeHandler($event)">
       <mat-datepicker-toggle matSuffix [for]="picker">
         <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
       </mat-datepicker-toggle>
